--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,23 @@
 * [test] Rename tests to match new spec, and clean up tests.
    typeof, var, let,
    func_bind
-   proc_get, proc_put, proc_link, proc_exec
+   proc_put, proc_link, proc_exec
    poly_value, poly_apply
+* [clean] Make FbleValue abstract in fble.h.
 * [tools] Add support for getting code coverage of fble executions.
 
 * [prgm] Optimize the fble implementation of tictactoe
   - Using monadic operations where feasible?
   - But only after setting up code coverage for fble.
-* [prgm] Implement game of life.
 * [prgm] Design better unit test library
  - Define a string type for test names and error messages
+* [prgm] Implement game of life.
 
 * [perf] Collect benchmarks somewhere?
   - md5 run on 6k file. ~7 minutes
   - tictactoe find best move for empty board. ~50 minutes
 * [clean] Factor out common code for thunks used by func, link, and exec.
 * [test] Test and fix handling of type vs. normal name.
-* [clean] Make FbleValue abstract in fble.h.
 * [perf] figure out how to use 'perf' for profiling?
   perf record --call-graph dwarf [COMMAND]
   perf report -g --stdio
