--- a/TODO.txt
+++ b/TODO.txt
@@ -4,9 +4,7 @@
    proc_put, proc_link, proc_exec
    poly_value, poly_apply
 * [tools] Code coverage and profiling support
- - implement profiling library: Profile, ProfileThread, Enter, Exit, AutoExit
- - implement profile processing and dumping: block listing, coverage, missing
-   blocks, flat profile, graph profile.
+ - implement profiling library: ProfileThread, Enter, Exit, AutoExit
  - add and implement PROFILE_ENTER, EXIT, AUTO_EXIT instructions.
  - Generate the PROFILE_* instructions in the compiler.
  - Do auto-naming of blocks based on variable/field names relevant to the
