Drafted code for profile thread, call, tail call, and exit.
Untested.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@
    proc_put, proc_link, proc_exec
    poly_value, poly_apply
 * [tools] Code coverage and profiling support
- - implement profiling library: ProfileThread, Enter, Exit, AutoExit
+ - test profiling library on sample traces.
  - add and implement PROFILE_ENTER, EXIT, AUTO_EXIT instructions.
  - Generate the PROFILE_* instructions in the compiler.
  - Do auto-naming of blocks based on variable/field names relevant to the
