Test and fix profiling involving self recursive calls.

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@
    poly_value, poly_apply
 * [tools] Code coverage and profiling support
  - test profiling library on more sample traces.
-   self recursion, mutual recursion.
+   mutual recursion.
  - add and implement PROFILE_ENTER, EXIT, AUTO_EXIT instructions.
  - Generate the PROFILE_* instructions in the compiler.
  - Do auto-naming of blocks based on variable/field names relevant to the
