--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,7 @@
    proc_put, proc_link, proc_exec
    poly_value, poly_apply
 * [tools] Code coverage and profiling support
- - test profiling library on more sample traces.
-   mutual recursion.
+ - rework api to have ENTER, EXIT, and AUTO_EXIT
  - add and implement PROFILE_ENTER, EXIT, AUTO_EXIT instructions.
  - Generate the PROFILE_* instructions in the compiler.
  - Do auto-naming of blocks based on variable/field names relevant to the
