Add profiling args to FbleEval, FbleApply, and FbleExec.
The new arguments aren't wired up yet.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@
    proc_put, proc_link, proc_exec
    poly_value, poly_apply
 * [tools] Code coverage and profiling support
+ - Add --coverage option to fble-test.
  - add and implement PROFILE_ENTER, EXIT, AUTO_EXIT instructions.
  - Generate the PROFILE_* instructions in the compiler.
  - Do auto-naming of blocks based on variable/field names relevant to the
