--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,8 @@
    proc_put, proc_link, proc_exec
    poly_value, poly_apply
 * [tools] Code coverage and profiling support
- - add and implement PROFILE_ENTER, EXIT, AUTO_EXIT instructions.
- - Generate the PROFILE_* instructions in the compiler.
+ - debug seg faults.
+ - Generate PROFILE_* instructions for union select.
  - Do auto-naming of blocks based on variable/field names relevant to the
    block being compiled.
  - Fix memory leak in case of tail recursion.
