--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,7 @@
  - Do auto-naming of blocks based on variable/field names relevant to the
    block being compiled.
  - Fix memory leak in case of tail recursion.
+ - Use model for time instead of instructions executed.
 
 * [prgm] Optimize the fble implementation of tictactoe
   - Using monadic operations where feasible?
