--- a/TODO.txt
+++ b/TODO.txt
@@ -3,8 +3,6 @@
    func_bind
    proc_put, proc_link, proc_exec
    poly_value, poly_apply
-* [tools] Code coverage and profiling support
- - Use model for time instead of instructions executed.
 
 * [prgm] Optimize the fble implementation of tictactoe
   - Using monadic operations where feasible?
@@ -13,6 +11,9 @@
  - Define a string type for test names and error messages
 * [prgm] Implement game of life.
 
+* [clean] Tracking of time in the compiler is really messy
+  Especially that we extract the pointer to the time field from NewBlock by
+  assuming what NewBlock does. Figure out some way to clean this up.
 * [clean] Figure out a nicer way to deal with fble-ref-test having access to
   internal ref.h
 * [perf] Collect benchmarks somewhere?
