Converted Primes test to new Test library.
The test error messages aren't nice yet, but we can worry about that later.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,10 @@
    proc_put, proc_link, proc_exec
    poly_value, poly_apply
 * [prgm] Convert AllTests to new fble-tests format
+* [prgm] Have fble-tests generate code coverage and profile info.
 * [prgm] Expand test coverage
+* [prgm] Optimize the fble implementation of md5
+  - particularly inc and cls functions.
 
 * [prgm] Optimize the fble implementation of tictactoe
   - Using monadic operations where feasible?
