Implement Bit.inc function.
Instead of using Bit.fulladd(a, 0, 1). Improves performance a fair amount
because we no longer need to traverse every bit in the bit vector to do an
increment.

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@
    poly_value, poly_apply
 * [prgm] Expand test coverage
 * [prgm] Optimize the fble implementation of md5
-  - particularly inc and cls functions.
+  - particularly the cls function.
 
 * [prgm] Optimize the fble implementation of tictactoe
   - Using monadic operations where feasible?
