--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,12 @@
 * [test] Rename tests to match new spec, and clean up tests.
    typeof, var, let,
    func_bind
-   proc_put, proc_link, proc_exec
+   proc_link, proc_exec
    poly_value, poly_apply
 * [prgm] Expand test coverage
-* [prgm] Optimize the fble implementation of md5
-  - particularly the cls function.
+* [prgm] Optimize Md5.cls function
+  - change cls to use or(x << n, x >> (K - n))
+  - change << and >> to take number of bits to shift instead of a single bit.
 
 * [prgm] Optimize the fble implementation of tictactoe
   - Using monadic operations where feasible?
